add subjetc behaviour

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-
+<!-- 
 <app-one></app-one>
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
+
+<div>
+    <app-comone></app-comone>
+    <app-comtwo></app-comtwo>
+</div>
+<div>
+    <app-comthree></app-comthree>
+</div>
