--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,17 @@
 <!-- 
 <app-one></app-one>
 <router-outlet></router-outlet> -->
-
+<!-- 
 <div>
     <app-comone></app-comone>
     <app-comtwo></app-comtwo>
 </div>
 <div>
     <app-comthree></app-comthree>
+</div> -->
+
+
+<div>
+    <app-ngone></app-ngone>
+    <app-ngthree></app-ngthree>
 </div>
